--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "homepage": "https://github.com/illuminatedspace/passepartout#readme",
   "dependencies": {
     "cheerio": "^0.22.0",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "request": "^2.81.0"
   },
   "devDependencies": {
     "morgan": "^1.8.1",
